--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=BoatRegistry
+spring.profiles.active=local
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+
+# Create an application-local.properties file with the db connection data:
+#spring.datasource.url=???
+#spring.datasource.username=???
+#spring.datasource.password=???
