Add JWT base 64 key from application.properties and add authorization to the requests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,11 @@ spring.flyway.baseline-on-migrate=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+jwt.expirationDurationMin=60
 # Create an application-local.properties file with the db connection data:
 #spring.datasource.url=???
 #spring.datasource.username=???
 #spring.datasource.password=???
+
+# Define the base 64 secret
+#jwt.secret=???
